Tell the people what they need to know,

--- a/dada/extras/documentation/pod_source/changes_9_x.pod
+++ b/dada/extras/documentation/pod_source/changes_9_x.pod
@@ -6,6 +6,20 @@
 
 =head2 Features
 
+=head3 Rate Limiting
+
+We've enabled a B<Rate Limiting> in Dada Mail! This is a safegaurd against perhaps nefarious attempts at attacking the app when there are requests information done many times in a given time frame. Before this version, Dada Mail would happily try to serve each request, and sometimes this can cause problems. One scenario:
+
+Say you have a subscrption form, and say that form has been targeted by a bot to attempt to exploit it. There currently are I<not> any known exploits out there in the wild for Dada Mail, but perhaps the bot doesn't know that, so it just tries to fill out your form multiple times a I<second>. This can cause problems with resources on your hosting account reaching their limit, and also cause multiple emails to be sent to bogus addresses, and probably bounce back, which cause an annoyance. If you have a third party email service, like Amazon SES (which we highly recommend!), this can work against you, as the service monitors bounce rates closely, and will not allow the rate to go too high. If it does, you're in hot water.
+
+Rate Limiting monitors why is requesting what, and how many times. If it notices what could potentially be abuse, it'll deny the request for a small amount of time. This stops flagrant and out of control abuse of the app, easily. 
+
+Rate Limiting is enabled by default, and its options can be customized in Dada Mail's included installer. B<More Information:> L<http://dadamailproject.com/d/install_dada_mail-advanced_configuration.pod.html#Rate-Limiting>
+
+=head1 9.3.0
+
+=head2 Features
+
 =head3 Subscriber Delivery Preferences editing on Membership - View screen
 
 For discussion lists that have digest enabled, editing indivual delivery preferences can be done on the I<Membership - View screen>, rather than have to visit the individual subscriber's membership screen to make the edit. 
